Fix Analyze/Model Sidebars on IE11
- Sidebars were blank on IE11
- Bootstrap styling had been changed --> revert

--- a/src/mmw/sass/bootstrap/_navs.scss
+++ b/src/mmw/sass/bootstrap/_navs.scss
@@ -222,7 +222,7 @@
     display: none;
   }
   > .active {
-    display: initial;
+    display: block;
   }
 }
 
